The first practical version

--- a/phpbb3_to_wp/App.config
+++ b/phpbb3_to_wp/App.config
@@ -1,6 +1,72 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="phpbb3_to_wp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <phpbb3_to_wp.Properties.Settings>
+            <setting name="MySQLphpbb3ConnStr" serializeAs="String">
+                <value>Server=localhost;Database=phpbb3;Uid=root;Pwd=;</value>
+            </setting>
+            <setting name="TablePrefix" serializeAs="String">
+                <value>phpbb_</value>
+            </setting>
+            <setting name="P2ADefault" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="P2AReMapping" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="WordpressBaseXML" serializeAs="String">
+                <value>wordpress_base.xml</value>
+            </setting>
+            <setting name="TagList" serializeAs="String">
+                <value>one line one tag</value>
+            </setting>
+            <setting name="BBCodeToHtmlTag" serializeAs="String">
+                <value>[attachment=0]=
+[attachment=1]=
+[attachment=2]=
+[/attachment]=
+[b]=&lt;strong&gt;
+[/b]=&lt;/strong&gt;
+[code]=&lt;pre&gt;&lt;code&gt;
+[/code]=&lt;/code&gt;&lt;/pre&gt;
+[color=%%TEXT1%%]=&lt;span style="color: %%TEXT1%%;"&gt;
+[/color]=&lt;/span&gt;
+[i]=&lt;em&gt;
+[/i]=&lt;/em&gt;
+[img]=&lt;img&gt;
+[/img]=&lt;/img&gt;
+[list]=&lt;ul&gt;
+[/list:u]=&lt;/ul&gt;
+[list=1]=&lt;ol&gt;
+[list=a]=&lt;ol&gt;
+[/list:o]=&lt;/ol&gt;
+[quote=%%TEXT1%%]=quote=%%TEXT1%%&lt;blockquote&gt;
+[/quote]=&lt;/blockquote&gt;
+[s]=&lt;del&gt;
+[/s]=&lt;/del&gt;
+[size=75]=&lt;span style="font-size: 75%; line-height: 58%;"&gt;
+[size=116]=&lt;span style="font-size: 116%; line-height: 90%;"&gt;
+[size=117]=&lt;span style="font-size: 117%; line-height: 90%;"&gt;
+[size=150]=&lt;span style="font-size: 150%; line-height: 116%;"&gt;
+[/size]=&lt;/span&gt;
+[url=%%TEXT1%%]=&lt;a href="%%TEXT1%%"&gt;
+[url]=&lt;a&gt;
+[/url]=&lt;/a&gt;
+[*]=&lt;li&gt;
+[/*:m]=&lt;/li&gt;
+</value>
+            </setting>
+            <setting name="ExcludeTopicsID" serializeAs="String">
+                <value />
+            </setting>
+        </phpbb3_to_wp.Properties.Settings>
+    </userSettings>
 </configuration>
