--- a/phpbb3_to_wp/Properties/Settings.settings
+++ b/phpbb3_to_wp/Properties/Settings.settings
@@ -1,7 +1,63 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="phpbb3_to_wp.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="MySQLphpbb3ConnStr" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Server=localhost;Database=phpbb3;Uid=root;Pwd=;</Value>
+    </Setting>
+    <Setting Name="TablePrefix" Type="System.String" Scope="User">
+      <Value Profile="(Default)">phpbb_</Value>
+    </Setting>
+    <Setting Name="P2ADefault" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="P2AReMapping" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="WordpressBaseXML" Type="System.String" Scope="User">
+      <Value Profile="(Default)">wordpress_base.xml</Value>
+    </Setting>
+    <Setting Name="TagList" Type="System.String" Scope="User">
+      <Value Profile="(Default)">one line one tag</Value>
+    </Setting>
+    <Setting Name="BBCodeToHtmlTag" Type="System.String" Scope="User">
+      <Value Profile="(Default)">[attachment=0]=
+[attachment=1]=
+[attachment=2]=
+[/attachment]=
+[b]=&lt;strong&gt;
+[/b]=&lt;/strong&gt;
+[code]=&lt;pre&gt;&lt;code&gt;
+[/code]=&lt;/code&gt;&lt;/pre&gt;
+[color=%%TEXT1%%]=&lt;span style="color: %%TEXT1%%;"&gt;
+[/color]=&lt;/span&gt;
+[i]=&lt;em&gt;
+[/i]=&lt;/em&gt;
+[img]=&lt;img&gt;
+[/img]=&lt;/img&gt;
+[list]=&lt;ul&gt;
+[/list:u]=&lt;/ul&gt;
+[list=1]=&lt;ol&gt;
+[list=a]=&lt;ol&gt;
+[/list:o]=&lt;/ol&gt;
+[quote=%%TEXT1%%]=quote=%%TEXT1%%&lt;blockquote&gt;
+[/quote]=&lt;/blockquote&gt;
+[s]=&lt;del&gt;
+[/s]=&lt;/del&gt;
+[size=75]=&lt;span style="font-size: 75%; line-height: 58%;"&gt;
+[size=116]=&lt;span style="font-size: 116%; line-height: 90%;"&gt;
+[size=117]=&lt;span style="font-size: 117%; line-height: 90%;"&gt;
+[size=150]=&lt;span style="font-size: 150%; line-height: 116%;"&gt;
+[/size]=&lt;/span&gt;
+[url=%%TEXT1%%]=&lt;a href="%%TEXT1%%"&gt;
+[url]=&lt;a&gt;
+[/url]=&lt;/a&gt;
+[*]=&lt;li&gt;
+[/*:m]=&lt;/li&gt;
+</Value>
+    </Setting>
+    <Setting Name="ExcludeTopicsID" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+  </Settings>
 </SettingsFile>
